examples/test/testpolicy13351.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13351
  namespace: namespace319
spec:
  podSelector:
    matchLabels:
      key18: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value43
          key26: value13
          key25: value7
      podSelector:
        matchLabels:
          key0: value21
